--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -3,21 +3,29 @@ services:
     image: backend
     platform: linux/amd64
     build: .
-    container_name: schedule-backend
+    container_name: backend
     restart: unless-stopped
     ports:
       - "8082:8080"
     depends_on:
       - db
     environment:
-        - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/green_schedule
-        - SPRING_DATASOURCE_USERNAME=useruser
-        - SPRING_DATASOURCE_PASSWORD=postgres
-        - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/green_schedule
+      - SPRING_DATASOURCE_USERNAME=useruser
+      - SPRING_DATASOURCE_PASSWORD=postgres
+      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+    networks:
+      - green
 
   db:
     image: postgres:alpine
     environment:
-        - POSTGRES_DB=green_schedule
-        - POSTGRES_USER=useruser
-        - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=green_schedule
+      - POSTGRES_USER=useruser
+      - POSTGRES_PASSWORD=postgres
+    networks:
+      - green
+
+networks:
+  green:
+    external: true
